[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newsagg"
version = "1.0.0"
description = "Daily digest SDK - aggregate news from X, Reddit, GitHub, HackerNews, and EN/ZH/JA news sites"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
newsagg = "newsagg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["newsagg*"]
